--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.94"
+lofty = "0.21.1"
+lrc = "0.1.8"
+reqwest = { version = "0.12.9", features = ["json"] }
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.133"
+thiserror = "2.0.7"
+tokio = { version = "1.42.0", features = ["full"] }
+tracing = "0.1.41"
+walkdir = "2.5.0"
