working on requests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.94"
+const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
 lofty = "0.21.1"
 lrc = "0.1.8"
 reqwest = { version = "0.12.9", features = ["json"] }
