--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.94"
 const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
 lofty = "0.21.1"
 lrc = "0.1.8"
+rayon = "1.10.0"
 reqwest = { version = "0.12.9", features = ["json"] }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
