--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.94"
 const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
+indoc = "2.0.5"
 lofty = "0.21.1"
 lrc = "0.1.8"
 rayon = "1.10.0"
