--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,6 @@ serde_json = "1.0.133"
 thiserror = "2.0.7"
 tokio = { version = "1.42.0", features = ["full"] }
 tracing = "0.1.41"
-walkdir = "2.5.0"
+
+[dev-dependencies]
+tempfile = "3.14.0"
