--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0.133"
 thiserror = "2.0.7"
 tokio = { version = "1.42.0", features = ["full"] }
 tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 [dev-dependencies]
 tempfile = "3.14.0"
