--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ edition = "2021"
 lto = "thin"
 
 [dependencies]
-clap = { version = "4.5", features = ["unstable-doc", "derive", "cargo"] }
+clap = { version = "4.5", features = ["derive", "cargo"] }
 const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
 ignore = "0.4.23"
 indoc = "2.0"
